--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -3,8 +3,10 @@ body {
     text-align: center;
 }
 
-#title {
-    background: linear-gradient(90deg, rgba(79,15,255,1) 0%, rgba(61,9,249,1) 100%);    
+/* Header */
+
+#header {
+    background:linear-gradient(rgba(79,15,255,0.8), rgba(61,9,249,0.7)),url("/img/doodle.jpg");    
     padding: 3% 7%;
     color: #fff;
 }
@@ -23,10 +25,17 @@ body {
 
 nav .navbar-nav li a{
     color: #f0f0f0;
+    font-size: 1.2rem;
+    text-shadow: 3px 3px 3px #2f03d1;
+
 }
 
 nav .navbar-nav li a:hover{
     color: #919191;
+}
+
+nav .navbar-nav li a:focus{
+    color: #f0f0f0;
 }
 
 button .navbar-toggler {
@@ -40,3 +49,42 @@ button .navbar-toggler {
 .custom-toggler.navbar-toggler {
     border-color: #f0f0f0;
 } 
+
+/* Projects */
+
+#projects {
+    padding: 5% 15%;
+}
+
+.title-projects {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #212121;
+    text-shadow: 1px 1px 1px #BDBDBD;
+}
+
+.project-1 {
+    padding-top: 5%;
+}
+
+.projects-text {
+    
+}
+
+
+.img-projects {
+    position: relative;
+    width: 100%;
+}
+
+.name-projects {
+    font-size: 20px;
+    color: #3d09f9cc;
+    font-weight: bold;
+    padding-top: 5%;
+}
+
+.projects-details{
+    padding: 3% 0;
+}
