--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,19 @@ body {
   text-align: center;
 }
 
+a {
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+}
+
 /* Header */
 
 #header {
   background: linear-gradient(rgba(79, 15, 255, 0.8), rgba(61, 9, 249, 0.7)),
-    url("/img/doodle.jpg");
+    url("/img/programming-doodle.jpg");
   padding: 3% 7%;
   color: #fff;
 }
@@ -120,41 +128,62 @@ button .navbar-toggler {
   text-align: justify;
 }
 
-footer {
-  height: 10vh;
-  list-style: none;
-  padding-bottom: 5%;
-}
-
-footer .socialMedia #icons img {
-  width: 2vh;
-  padding-top: 5%;
-  margin: 2%;
-}
-
 /* Contacto */
 #contacto {
- 
-  padding: 5% 15%;
+  padding: 5rem 4rem;
 }
  
-.header h3 {
-  padding: 5% 15%;
-  margin: 5px;
+.contacto-subtitle {
+  padding: 2% 15%;
+  text-align: center;
+  color: #313131;
+}
+
+.contacto-text {
+  padding: 2% 5%;
+  text-align: center;
 }
 
 .form button{
-  background-color: #5d42d6;
-  border: 2px solid #000000cc;
-  border-radius: 4px;
+  margin-top: 2%;
+  background-color: #212121;
+  border-color: #212121;
+  border-radius: 10px;
   color: #ffffff;
-  font-size: 22px;
+  font-size: 17px;
+  padding: 1rem 5%;
 }
 
 .form button:hover{
-  background-color: #5d42d6;
-  border: 2px solid #000000cc;
-  border-radius: 4px;
-  color: #ffffff;
-  font-size: 22px;
+  background-color: #616161;
+  border-color: #616161;
+}
+
+/* Footer */
+footer {
+  background-color: #212121;
+  padding: 2rem 15%;
+}
+
+
+/* Derechos Reservados */
+
+.fa-brands {
+  color: #f0f0f0;
+  padding-bottom: 3rem;
+  padding-left: 1rem;
+}
+
+.fa-brands:hover {
+  color: #919191;
+}
+
+.footer-logo {
+  width: 2rem;
+}
+
+.derechos-text {
+  color: #f0f0f0;
+  font-size: 1rem;
+  padding-left: 0.5rem;
 }
