--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,11 @@ body {
 }
 
 a {
-  color: inherit;
+  text-decoration: none;
 }
 
 a:hover {
-  color: inherit;
+  text-decoration: none;
 }
 
 /* Header */
@@ -81,7 +81,7 @@ button .navbar-toggler {
 
 .subtitle-section-light {
   font-size: 20px;
-  color: #3d09f9cc;
+  color: #313131;
   font-weight: bold;
   padding-top: 5%;
 }
@@ -111,7 +111,7 @@ button .navbar-toggler {
 
 .img-nosotros {
   position: relative;
-  width: 100%;
+  width: 80%;
   border-radius: 500px;
 }
 
@@ -128,6 +128,7 @@ button .navbar-toggler {
   color: #f0f0f0;
   text-align: justify;
 }
+
 
 /* Contacto */
 #contacto {
