--- a/css/index.css
+++ b/css/index.css
@@ -189,3 +189,16 @@ footer {
   font-size: 1rem;
   padding-left: 0.5rem;
 }
+
+
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 2s ease;
+}
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1;
+}
